# rust-server-legacy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-rust.yml  test-rust.yml
src/: config.rs  lib.rs  main.rs  packet_gen.rs  parser.rs  serial.rs  serial_utils.rs  update_state.rs  websocket-tester.html  websocket_server.rs  xml_parser.rs
