[package]
name = "tlserver"
version = "0.1.0"
authors = ["matt-hu <matt.hu1@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
mini-redis = "0.4"
# tokio = "1.6.1"
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"
log = "0.4"
env_logger = "*"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
futures-channel = "0.3.18"
# tokio = { version = "1.0.0", default-features = false, features = ["io-util"] }

serde_json = "1.0.82"
serial = "0.4"
